base service implemented

--- a/Jt76.Ui/ClientApp/src/app/shared/components/alert/alert.component.html
+++ b/Jt76.Ui/ClientApp/src/app/shared/components/alert/alert.component.html
@@ -2,7 +2,7 @@
   {{message}}
   <div *ngIf="additionalInformation.length">
     <hr />
-    <div class="alert-info">
+    <div class="alert-details">
       {{additionalInformation}}
     </div>
   </div>
