--- a/Jt76.Ui/ClientApp/src/app/modules/admin/log-files/log-files.component.html
+++ b/Jt76.Ui/ClientApp/src/app/modules/admin/log-files/log-files.component.html
@@ -40,19 +40,33 @@
         <mat-action-row>
           <button mat-button
                   color="accent"
-                  (click)="detailedLogFileClicked(item)">Detailed</button>
+                  (click)="detailedLogFileClicked(item)">
+            Detailed
+          </button>
           <button mat-button
                   color="warn"
-                  (click)="firstStep()">First</button>
+                  (click)="firstStep()"
+                  *ngIf="i > 0">
+            First
+          </button>
           <button mat-button
                   color="warn"
-                  (click)="prevStep()">Previous</button>
+                  (click)="prevStep()"
+                  *ngIf="i > 0">
+            Previous
+          </button>
           <button mat-button
                   color="warn"
-                  (click)="nextStep()">Next</button>
+                  (click)="nextStep()"
+                  *ngIf="i < logFiles.length - 1">
+            Next
+          </button>
           <button mat-button
                   color="warn"
-                  (click)="lastStep()">Last</button>
+                  (click)="lastStep()"
+                  *ngIf="i < logFiles.length - 1">
+            Last
+          </button>
         </mat-action-row>
 
       </mat-expansion-panel>
