--- a/Jt76.Ui/ClientApp/src/app/modules/admin/log-files/log-files.component.scss
+++ b/Jt76.Ui/ClientApp/src/app/modules/admin/log-files/log-files.component.scss
@@ -2,6 +2,10 @@
   padding-bottom: 70px;
 }
 
+.component-title {
+  padding-bottom: 8px;
+}
+
 .file-content {
   padding: 15px;
   border-radius: .5em;
