--- a/Jt76.Ui/ClientApp/src/app/app.component.html
+++ b/Jt76.Ui/ClientApp/src/app/app.component.html
@@ -6,7 +6,10 @@
     <button mat-button
             routerLink="dashboard"
             class="nav-button">
-      <mat-icon>home</mat-icon> {{title}}
+      <mat-icon>home</mat-icon>
+      <span class="component-detail">
+        {{title}}
+      </span>
     </button>
 
     <span class="toolbar-spacer">
