--- a/Jt76.Ui/ClientApp/src/app/app.component.scss
+++ b/Jt76.Ui/ClientApp/src/app/app.component.scss
@@ -5,7 +5,7 @@
   display: block;
   border: none;
   height: calc(100vh - 64px);
-  width: 100%;
+  width: calc(100% - 50px);
   padding: 15px 25px 15px 25px;
 }
 
