--- a/Jt76.Ui/ClientApp/src/app/modules/weather/weather.component.html
+++ b/Jt76.Ui/ClientApp/src/app/modules/weather/weather.component.html
@@ -29,9 +29,10 @@
             Weather as of {{currentTime | date:'EEEE, MMMM d'}} at {{currentTime | date:'shortTime' }}
           </mat-card-subtitle>
         </mat-card-header>
-        <img mat-card-image
-             [src]="currentWeather.skycon"
-             [alt]="currentWeather.description">
+        <!--<img mat-card-image
+                 [src]="currentWeather.skycon"
+                 [alt]="currentWeather.description">-->
+        <app-sky-con></app-sky-con>
         <mat-card-content>
           <p>
             {{currentWeather.description}}
