Some more daily weather decorations

--- a/Jt76.Ui/ClientApp/src/app/modules/admin/admin.component.scss
+++ b/Jt76.Ui/ClientApp/src/app/modules/admin/admin.component.scss
@@ -9,9 +9,9 @@
   left: 0px;
   display: block;
   border: none;
-  height: calc(100vh - 64px);
-  width: calc(100% - 150px);
-  padding: 15px 25px 15px 25px;
+  height: calc(100vh - 175px);
+  width: calc(100% - 155px);
+  padding: 25px;
 }
 
 .mat-card-avatar{
