--- a/Jt76.Ui/ClientApp/src/app/modules/weather/components/sky-con/sky-con.component.html
+++ b/Jt76.Ui/ClientApp/src/app/modules/weather/components/sky-con/sky-con.component.html
@@ -1,4 +1,8 @@
-<canvas id="sky-con-canvas"
-        width="128"
-        height="128">
-</canvas>
+<div class="sky-con">
+  <canvas #SkyCanvas
+          [width]="width"
+          [height]="height">
+  </canvas>
+</div>
+
+
