A little more work on scroll displays being off with calc

--- a/Jt76.Ui/ClientApp/src/app/app.component.scss
+++ b/Jt76.Ui/ClientApp/src/app/app.component.scss
@@ -5,8 +5,8 @@
   display: block;
   border: none;
   height: calc(100vh - 64px);
-  width: calc(100% - 50px);
-  padding: 15px 25px 15px 25px;
+  width: calc(100% - 55px);
+  padding: 25px;
 }
 
 .copyright {
