Implemented a base data component class, to share an interface for all data related components

--- a/Jt76.Ui/ClientApp/src/app/modules/admin/errors/errors.component.html
+++ b/Jt76.Ui/ClientApp/src/app/modules/admin/errors/errors.component.html
@@ -17,7 +17,7 @@
     </span>
   </p>
 
-  <div *ngIf="errors.length || countIsZero;else loading">
+  <div *ngIf="isLoaded;else loading">
     <mat-nav-list>
 
       <mat-list-item class="list-item"
