--- a/Jt76.Ui/ClientApp/src/app/modules/admin/errors/error/error.component.html
+++ b/Jt76.Ui/ClientApp/src/app/modules/admin/errors/error/error.component.html
@@ -6,7 +6,7 @@
 
   <mat-card-content>
 
-    <div *ngIf="error;else loading">
+    <div *ngIf="isLoaded;else loading">
       {{error.message}}
       <br />
       {{error.errorLevel}}
