--- a/Jt76.Ui/ClientApp/src/themes/light-theme.scss
+++ b/Jt76.Ui/ClientApp/src/themes/light-theme.scss
@@ -1,5 +1,5 @@
 $app-light-primary: mat-palette($mat-grey, 300, 600, 400);
-$app-light-accent: mat-palette($mat-brown, 400);
-$app-light-warn: mat-palette($mat-deep-orange, 400);
+$app-light-accent: mat-palette($mat-grey, 400);
+$app-light-warn: mat-palette($mat-grey, 400);
 
 $app-light-theme: mat-light-theme( $app-light-primary, $app-light-accent, $app-light-warn );
