--- a/Jt76.Ui/ClientApp/src/styles.scss
+++ b/Jt76.Ui/ClientApp/src/styles.scss
@@ -33,7 +33,6 @@
 }
 
 .component-detail {
-  margin-left: 15px;
   font-size: 1.1em !important;
   font-weight: bold;
 }
@@ -65,4 +64,9 @@ ellipsis {
 /* Angular material overloads */
 .mat-card {
   border-radius: 6px !important;
+}
+
+
+body {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
