Added a required interface for data components, and some formatting for the weather panel

--- a/Jt76.Ui/ClientApp/src/app/modules/weather/weather-panel/weather-panel.component.html
+++ b/Jt76.Ui/ClientApp/src/app/modules/weather/weather-panel/weather-panel.component.html
@@ -35,8 +35,8 @@
     </span>
     <hr />
 
-    <h2 style="text-align:center">{{day}}</h2>
-    <div id="wrapper" style="position: relative; height:300px">
+    <h2 class="center">{{day}}</h2>
+    <div id="wrapper" style="position: relative; height:275px">
       <canvas #WeatherGraph></canvas>
     </div>
 
