--- a/Jt76.Ui/ClientApp/src/styles.scss
+++ b/Jt76.Ui/ClientApp/src/styles.scss
@@ -27,6 +27,10 @@
   float: right;
 }
 
+.center {
+  text-align: center
+}
+
 .component-title {
   font-size: 1.3em !important;
   font-weight: bolder;
