Setup weather breakout by time accordion

--- a/Jt76.Ui/ClientApp/src/app/modules/admin/log-files/log-files.component.html
+++ b/Jt76.Ui/ClientApp/src/app/modules/admin/log-files/log-files.component.html
@@ -30,7 +30,7 @@
         </mat-expansion-panel-header>
 
         <div (click)="hideInfo();"
-             class="list-item file-content">
+             class="list-item accordion-content">
           <div *ngFor="let line of item.recentFileLines"
                class="ellipsis">
             {{line}}
