finalized weather display

--- a/Jt76.Ui/ClientApp/src/app/modules/admin/log-files/log-files.component.html
+++ b/Jt76.Ui/ClientApp/src/app/modules/admin/log-files/log-files.component.html
@@ -34,8 +34,7 @@
              class="list-item accordion-content">
           <div *ngFor="let line of item.recentFileLines"
                class="ellipsis">
-            {{line}}
-            <br />
+            <div>{{line}}</div>
           </div>
         </div>
 
