--- a/Jt76.Ui/ClientApp/src/app/modules/weather/weather-panel/weather-panel.component.scss
+++ b/Jt76.Ui/ClientApp/src/app/modules/weather/weather-panel/weather-panel.component.scss
@@ -1,3 +1,12 @@
+.mat-grid-tile .mat-figure {
+  justify-content: flex-start !important;
+}
+
+
+.accordion-content {
+  justify-content: flex-start !important;
+}
+
 .accordion-wrapper {
   padding: 10px;
 }
